crash.log
Crashlog created at 2013-12-09 17:47:54 +0100

===== MESSAGE:

SyntaxError: ./Rules:38: syntax error, unexpected ',', expecting keyword_end
    :colorize_syntax, :default_colorizer => :simon_highlight
                     ^

===== COMPILATION STACK:

  (empty)

===== STACK TRACE:

  0. /usr/local/Cellar/ruby/2.0.0-p247/lib/ruby/gems/2.0.0/gems/nanoc-3.6.6/lib/nanoc/base/compilation/rules_collection.rb:78:in `instance_eval'
  1. /usr/local/Cellar/ruby/2.0.0-p247/lib/ruby/gems/2.0.0/gems/nanoc-3.6.6/lib/nanoc/base/compilation/rules_collection.rb:78:in `load'
  2. /usr/local/Cellar/ruby/2.0.0-p247/lib/ruby/gems/2.0.0/gems/nanoc-3.6.6/lib/nanoc/base/compilation/compiler.rb:120:in `load'
  3. /usr/local/Cellar/ruby/2.0.0-p247/lib/ruby/gems/2.0.0/gems/nanoc-3.6.6/lib/nanoc/base/source_data/site.rb:250:in `load'
  4. /usr/local/Cellar/ruby/2.0.0-p247/lib/ruby/gems/2.0.0/gems/nanoc-3.6.6/lib/nanoc/cli/command_runner.rb:63:in `load_site'
  5. /usr/local/Cellar/ruby/2.0.0-p247/lib/ruby/gems/2.0.0/gems/nanoc-3.6.6/lib/nanoc/cli/commands/compile.rb:358:in `run'
  6. /usr/local/Cellar/ruby/2.0.0-p247/lib/ruby/gems/2.0.0/gems/nanoc-3.6.6/lib/nanoc/cli/command_runner.rb:14:in `block in call'
  7. /usr/local/Cellar/ruby/2.0.0-p247/lib/ruby/gems/2.0.0/gems/nanoc-3.6.6/lib/nanoc/cli/error_handler.rb:70:in `handle_while'
  8. /usr/local/Cellar/ruby/2.0.0-p247/lib/ruby/gems/2.0.0/gems/nanoc-3.6.6/lib/nanoc/cli/error_handler.rb:26:in `handle_while'
  9. /usr/local/Cellar/ruby/2.0.0-p247/lib/ruby/gems/2.0.0/gems/nanoc-3.6.6/lib/nanoc/cli/command_runner.rb:13:in `call'
  10. /usr/local/Cellar/ruby/2.0.0-p247/lib/ruby/gems/2.0.0/gems/cri-2.4.1/lib/cri/command_dsl.rb:185:in `block in runner'
  11. /usr/local/Cellar/ruby/2.0.0-p247/lib/ruby/gems/2.0.0/gems/cri-2.4.1/lib/cri/command.rb:298:in `call'
  12. /usr/local/Cellar/ruby/2.0.0-p247/lib/ruby/gems/2.0.0/gems/cri-2.4.1/lib/cri/command.rb:298:in `run_this'
  13. /usr/local/Cellar/ruby/2.0.0-p247/lib/ruby/gems/2.0.0/gems/cri-2.4.1/lib/cri/command.rb:251:in `run'
  14. /usr/local/Cellar/ruby/2.0.0-p247/lib/ruby/gems/2.0.0/gems/nanoc-3.6.6/lib/nanoc/cli/commands/nanoc.rb:39:in `block in define'
  15. /usr/local/Cellar/ruby/2.0.0-p247/lib/ruby/gems/2.0.0/gems/cri-2.4.1/lib/cri/command.rb:298:in `call'
  16. /usr/local/Cellar/ruby/2.0.0-p247/lib/ruby/gems/2.0.0/gems/cri-2.4.1/lib/cri/command.rb:298:in `run_this'
  17. /usr/local/Cellar/ruby/2.0.0-p247/lib/ruby/gems/2.0.0/gems/cri-2.4.1/lib/cri/command.rb:251:in `run'
  18. /usr/local/Cellar/ruby/2.0.0-p247/lib/ruby/gems/2.0.0/gems/nanoc-3.6.6/lib/nanoc/cli.rb:52:in `block in run'
  19. /usr/local/Cellar/ruby/2.0.0-p247/lib/ruby/gems/2.0.0/gems/nanoc-3.6.6/lib/nanoc/cli/error_handler.rb:70:in `handle_while'
  20. /usr/local/Cellar/ruby/2.0.0-p247/lib/ruby/gems/2.0.0/gems/nanoc-3.6.6/lib/nanoc/cli/error_handler.rb:26:in `handle_while'
  21. /usr/local/Cellar/ruby/2.0.0-p247/lib/ruby/gems/2.0.0/gems/nanoc-3.6.6/lib/nanoc/cli.rb:50:in `run'
  22. /usr/local/Cellar/ruby/2.0.0-p247/lib/ruby/gems/2.0.0/gems/nanoc-3.6.6/bin/nanoc:19:in `<top (required)>'
  23. /usr/local/opt/ruby/bin/nanoc:23:in `load'
  ... 26 more lines omitted. See full crash log for details.

===== VERSION INFORMATION:

nanoc 3.6.6 © 2007-2013 Denis Defreyne.
Running ruby 2.0.0 (2013-06-27) on x86_64-darwin12.5.0 with RubyGems 2.0.3.

===== SYSTEM INFORMATION:

Darwin 193-51-236-231.lille.inria.fr 12.5.0 Darwin Kernel Version 12.5.0: Sun Sep 29 13:33:47 PDT 2013; root:xnu-2050.48.12~1/RELEASE_X86_64 x86_64

===== INSTALLED GEMS:

  bigdecimal 1.2.0
  colored 1.2
  cri 2.4.1
  io-console 0.4.2
  json 1.7.7
  kramdown 1.3.0
  mini_portile 0.5.2
  minitest 4.3.2
  nanoc 3.6.6
  nokogiri 1.6.0
  psych 2.0.0
  rake 0.9.6
  rdoc 4.0.0
  systemu 2.6.0
  test-unit 2.0.0.0

===== ENVIRONMENT:

Apple_PubSub_Socket_Render => "/tmp/launch-NabFEd/Render"
Apple_Ubiquity_Message => "/tmp/launch-qHkLjr/Apple_Ubiquity_Message"
COMMAND_MODE => "unix2003"
COM_GOOGLE_CHROME_FRAMEWORK_SERVICE_PROCESS/USERS/JBARNAUD/LIBRARY/APPLICATION_SUPPORT/GOOGLE/CHROME_SOCKET => "/tmp/launch-xiSODm/ServiceProcessSocket"
DISPLAY => "/tmp/launch-LZzuol/org.macosforge.xquartz:0"
HOME => "/Users/jbarnaud"
LC_CTYPE => "UTF-8"
LOGNAME => "jbarnaud"
PATH => "/usr/local/opt/ruby/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/bin:/opt/X11/bin:/usr/texbin"
PWD => "/Users/jbarnaud/Documents/Repository/website"
SHELL => "/bin/bash"
SHLVL => "1"
SSH_AUTH_SOCK => "/tmp/launch-q6lJaO/Listeners"
TERM => "xterm-256color"
TERM_PROGRAM => "Apple_Terminal"
TERM_PROGRAM_VERSION => "309"
TERM_SESSION_ID => "37D02D9C-BEE2-4C9D-884B-88961795A84D"
TMPDIR => "/var/folders/gq/wrmkznvj4_q4nn04hmgr42xw0000gn/T/"
USER => "jbarnaud"
_ => "/usr/local/opt/ruby/bin/nanoc"
__CF_USER_TEXT_ENCODING => "0x1F5:0:0"

===== LOAD PATHS:

  0. /usr/local/Cellar/ruby/2.0.0-p247/lib/ruby/gems/2.0.0/gems/nanoc-3.6.6/lib
  1. /usr/local/Cellar/ruby/2.0.0-p247/lib/ruby/gems/2.0.0/gems/colored-1.2/lib
  2. /usr/local/Cellar/ruby/2.0.0-p247/lib/ruby/gems/2.0.0/gems/cri-2.4.1/lib
  3. /usr/local/Cellar/ruby/2.0.0-p247/lib/ruby/gems/2.0.0/gems/nanoc-3.6.6/lib
  4. /usr/local/Cellar/ruby/2.0.0-p247/lib/ruby/site_ruby/2.0.0
  5. /usr/local/Cellar/ruby/2.0.0-p247/lib/ruby/site_ruby/2.0.0/x86_64-darwin12.5.0
  6. /usr/local/Cellar/ruby/2.0.0-p247/lib/ruby/site_ruby
  7. /usr/local/Cellar/ruby/2.0.0-p247/lib/ruby/vendor_ruby/2.0.0
  8. /usr/local/Cellar/ruby/2.0.0-p247/lib/ruby/vendor_ruby/2.0.0/x86_64-darwin12.5.0
  9. /usr/local/Cellar/ruby/2.0.0-p247/lib/ruby/vendor_ruby
  10. /usr/local/Cellar/ruby/2.0.0-p247/lib/ruby/2.0.0
  11. /usr/local/Cellar/ruby/2.0.0-p247/lib/ruby/2.0.0/x86_64-darwin12.5.0
